Simplify unified function impl by built-in rex executor
Signed-off-by: Chen Dai <daichen@amazon.com>